WIP stats. TODO reStoreOnRead